--- a/public/css/acumulado.css
+++ b/public/css/acumulado.css
@@ -66,6 +66,7 @@ color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 1em;
   }
   button:hover {
     background-color: #0056b3;
