--- a/public/css/acumulado.css
+++ b/public/css/acumulado.css
@@ -38,6 +38,7 @@ body {
     border-radius: 4px;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    margin-bottom: 1em;
   }
 
   table {
@@ -74,7 +75,7 @@ color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-top: 1em;
+    margin-top: 2em;
   }
   button:hover {
     background-color: #0056b3;
