--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,5 +1,5 @@
 .footer-basic {
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     width: 100%;
     padding: 2.5em 0; /* 40px a 2.5em */
