--- a/public/css/acumulado.css
+++ b/public/css/acumulado.css
@@ -69,7 +69,7 @@ background-color: #007bff;
 color: #fff;
 }
 
-  button {
+button {
     width: 100%; /* Ocupar todo el ancho del formulario */
     padding: 10px 20px;
     background-color: #007bff;
@@ -79,32 +79,23 @@ color: #fff;
     cursor: pointer;
     margin-top: 2em;
   }
-  button:hover {
+button:hover {
     background-color: #0056b3;
+
   }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-  th, td {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-    text-align: center;
-  }
-  th {
+th {
     background-color: #007bff;
     color: #fff;
   }
-  tbody tr:hover {
+tbody tr:hover {
     background-color: #f2f2f2;
   }
-  .pagination {
+.pagination {
     margin-top: 20px;
     display: flex;
     justify-content: center;
   }
-  .pagination button {
+.pagination button {
     margin: 0 5px;
     padding: 8px 16px;
     background-color: #007bff;
@@ -113,6 +104,36 @@ color: #fff;
     border-radius: 4px;
     cursor: pointer;
   }
-  .pagination button.active {
+.pagination button.active {
     background-color: #0056b3;
+  }
+
+.tables-wrapper {
+    overflow-x: auto;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 100%;
+  }
+  
+.table-container {
+    overflow-x: auto;
+    margin-bottom: 20px;
+  }
+  
+table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  th, td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+    white-space: nowrap;
+  }
+
+  .spinner-border {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-left: 5px; /* Ajusta el margen para que no se pegue al texto */
   }
